--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,34 +19,28 @@ categories = ["date-and-time"]
 keywords = ["timecode", "sleep"]
 publish = true
 
-[dependencies]
-log = "0.4.17"
-# itoa = "1.0.3"
-# ftoa = "0.1.1"
-
-instant = { version = "0.1.12", optional = true }
-spin_sleep = "1.1.1"
-time = "0.3.17"
-
-# MAYBE
-# hifitime = "^2.3" Precise date and time handling https://github.com/nyx-space/hifitime
-# aion = "0.2.0" #  utility crate for duration and datetime # https://github.com/jk-gan/aion
-# sn_fake_clock = "0.4.6" # deterministic testing https://github.com/maidsafe/sn_fake_clock
 
 [features]
-default = ["std", "safe"]
-std = []
+default = ["safe", "std"]
+std = ["time/std"]
 safe = []
-nightly = []
-
+nightly = [] # just for docs
 wasm = ["instant"]
 
+
+[dependencies]
+log = "0.4.17"
+spin_sleep = { version = "1.1.1" }
+time = { version = "0.3.20", default-features = false }
+#
+# optional
+instant = { version = "0.1.12", optional = true }
+libc = { version = "0.2.137", optional = true, default-features = false }
+
 [dev-dependencies]
-chrono = "0.4.22"
-libc = "0.2.137"
 
 [badges]
 maintenance = { status = "experimental" }
 
 [package.metadata.docs.rs]
-all-features = true
+features = ["nightly"]
