--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ publish = true
 [features]
 default = ["safe", "std"]
 #
-std = ["alloc", "time/std"]
+std = ["alloc", "time/std", "spin_sleep"]
 alloc = []
 no-std = []
 #
@@ -34,12 +34,12 @@ wasm = ["instant"]
 
 [dependencies]
 log = "0.4.17"
-spin_sleep = { version = "1.1.1" }
 time = { version = "0.3.20", default-features = false }
-#
+
 # optional
 instant = { version = "0.1.12", optional = true }
 libc = { version = "0.2.137", optional = true, default-features = false }
+spin_sleep = { version = "1.1.1", optional = true }
 
 [dev-dependencies]
 
