--- a/.github/workflows/nostd.yml
+++ b/.github/workflows/nostd.yml
@@ -11,7 +11,7 @@ name: "no-std"
 jobs:
   #
   nostd:
-    name: "${{ matrix.target }}"
+    name: "${{ matrix.target }} no-default-features"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,3 +29,24 @@ jobs:
       - name: "cargo check"
         # NOTE: custom
         run: cargo check --target ${{ matrix.target }} --no-default-features
+
+  #
+  alloc:
+    name: "${{ matrix.target }} alloc"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [thumbv7m-none-eabi, aarch64-unknown-none]
+    steps:
+      - name: "checkout"
+        uses: actions/checkout@v3
+
+      - name: "Install stable"
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: "rustup target add ${{ matrix.target }}"
+        run: rustup target add ${{ matrix.target }}
+
+      - name: "cargo check"
+        # NOTE: custom
+        run: cargo check --target ${{ matrix.target }} --no-default-features --features=alloc
