many features related changes
- bump MSRV to `1.72.0`
- add `devela` dependency.
- update dependencies: `time`, `ahash`, `libc`, `libm`.
- new features: `safest`, `unsafe`, `unsafest`, `nightly_docs`.
- require `unsafe` instead of `not(safe)`.
- rename `no-std` feature to `no_std`.
- deprecate `no-std` feature.
- add `check.sh` script.
- refactor manifest.
- update aliases.
- update readme.
- update CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
-        # with:
-        #   submodules: true
+        with:
+            submodules: true
 
       - name: "Install ${{ matrix.toolchain }}"
         uses: dtolnay/rust-toolchain@master
@@ -45,8 +45,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
-        # with:
-        #   submodules: true
+        with:
+            submodules: true
 
       - name: "Install stable"
         uses: dtolnay/rust-toolchain@stable
@@ -74,9 +74,9 @@ jobs:
         os: [macos-latest, windows-latest]
     steps:
       - name: "checkout"
-      - uses: actions/checkout@v3
-        # with:
-        #   submodules: true
+        uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install stable"
         uses: dtolnay/rust-toolchain@stable
