--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install stable"
         uses: dtolnay/rust-toolchain@stable
@@ -40,6 +42,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install ${{ matrix.toolchain }}"
         uses: dtolnay/rust-toolchain@master
@@ -57,8 +61,10 @@ jobs:
     name: "nightly / doc"
     runs-on: ubuntu-latest
     steps:
-      - name: "chekcout"
+      - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install nightly"
         uses: dtolnay/rust-toolchain@nightly
@@ -69,7 +75,7 @@ jobs:
         env:
           RUSTDOCFLAGS: --cfg docsrs
 
-  # 4. MSRV
+  # 4. minimum supported Rust version
   msrv:
     name: "ubuntu / ${{ matrix.msrv }}"
     runs-on: ubuntu-latest
@@ -77,11 +83,12 @@ jobs:
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     strategy:
       matrix:
-        # NOTE: custom
-        msrv: [1.63.0]
+        msrv: [1.72.0] # sync with ../../{readme, Cargo.toml, check.sh}
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install ${{ matrix.msrv }}"
         uses: dtolnay/rust-toolchain@master
