--- a/.github/workflows/nostd.yml
+++ b/.github/workflows/nostd.yml
@@ -1,7 +1,6 @@
 permissions:
   contents: read
 
-# runs on push to the main branch, and PRs
 on:
   push:
     branches: [main]
@@ -11,7 +10,7 @@ name: "no-std"
 jobs:
   #
   nostd:
-    name: "${{ matrix.target }} no-default-features"
+    name: "${{ matrix.target }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -19,6 +18,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install stable"
         uses: dtolnay/rust-toolchain@stable
@@ -32,7 +33,7 @@ jobs:
 
   #
   alloc:
-    name: "${{ matrix.target }} alloc"
+    name: "${{ matrix.target }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -40,6 +41,8 @@ jobs:
     steps:
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+            submodules: true
 
       - name: "Install stable"
         uses: dtolnay/rust-toolchain@stable
@@ -47,6 +50,6 @@ jobs:
       - name: "rustup target add ${{ matrix.target }}"
         run: rustup target add ${{ matrix.target }}
 
-      - name: "cargo check"
+      - name: "cargo check `alloc`"
         # NOTE: custom
         run: cargo check --target ${{ matrix.target }} --no-default-features --features=alloc
