--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "espera"
 description = "Time management, loop rates control."
 version = "0.2.0"
 edition = "2021"
-rust-version = "1.63" # in sync with CI
+rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
 authors = ["José Luis Cruz <joseluis@andamira.net>"]
 repository = "https://github.com/andamira/espera"
 documentation = "https://docs.rs/espera"
@@ -14,40 +14,59 @@ include = [
 	"/LICENSE-*",
 	"/README.md",
 ]
-categories = ["date-and-time", "no-std"]
+categories = ["date-and-time", "no_std"]
 keywords = ["time", "sleep", "loop", "rate", "fps"]
 publish = true
 
 
 [features]
-default = ["safe", "std"]
-#
-std = ["alloc", "ahash", "arraydeque", "sixbit", "time/std", "spin_sleep"]
-alloc = []
-no-std = ["libm"]
-#
-safe = []
-#
-nightly = [] # just for docs
+default = ["std"]
+
+# environment features
+std = [ # features that depend on the standard library
+	"alloc",
+	"ahash",
+	"arraydeque",
+	"sixbit",
+	"time/std",
+	"spin_sleep"
+]
+alloc = [] # features that depend on allocation
+no_std = ["libm"] # features incompatible with "std"
+
+# safety features
+safe = [] # forbid unsafe at the crate level
+safest = ["safe", "devela/safest"] # forbid unsafe recursively
+unsafe = [] # all the unsafe features
+unsafest = ["unsafe", "devela/unsafest"] # enable unsafe recursively
+
+# nightly features
+nightly = [] # used only for enhanced documentation
+nightly_docs = ["nightly", "std"] # features for docs.rs
+
+# other features
 # wasm = ["instant"]
 
 
 [dependencies]
-time = { version = "0.3.20", default-features = false }
+devela = { version = "0.8.0", default-features = false }
+time = { version = "0.3.28", default-features = false }
 log = "0.4"
 
 # optional
-ahash = { version = "0.8.2", optional = true }
+ahash = { version = "0.8.3", optional = true }
 arraydeque = { version = "0.4.5", optional = true }
 # instant = { version = "0.1.12", optional = true }
-libc = { version = "0.2.137", optional = true, default-features = false }
-libm = { version = "0.2.6", optional = true }
+libc = { version = "0.2", optional = true, default-features = false }
+libm = { version = "0.2.7", optional = true }
 sixbit = { version = "0.5.0", optional = true }
 spin_sleep = { version = "1.1.1", optional = true }
 
+[dev-dependencies]
+
+[package.metadata.docs.rs]
+no-default-features = true
+features = ["nightly_docs"]
 
 [badges]
 maintenance = { status = "experimental" }
-
-[package.metadata.docs.rs]
-features = ["nightly"]
