--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ publish = true
 
 
 [features]
-default = ["std"]
+
+default = []
 
 # environment features
 # (not enabling "std" declares the library as "no_std")
