--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ nightly_docs = [ # features for docs.rs
 
 
 [dependencies]
-devela = { version = "0.8.0", default-features = false }
+devela = "0.9.0"
 time = { version = "0.3.28", default-features = false }
 log = "0.4.20"
 
